# softboiler.github.io

./: .all-contributorsrc  .copier-answers.yml  .gitmodules  .pre-commit-config.yaml  .renovaterc.json  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  dev.ps1  index.html  lock-high.json  lock.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: SECURITY.md  issue_template.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yaml  ideas-for-docs.yaml  ideas-for-infrastructure.yaml  ideas.yaml  internal.yaml  q-a.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  internal.yaml
.github/workflows/: ci.yml  contrib.yml  docs.yml  high.yml  lock.yml  release.yml
changelog/: towncrier_template.md.jinja
docs/: conf.py  contributing.md  index.md  pyproject.toml
docs/softboiler_github_io_docs/: docstrings.py  intersphinx.py
requirements/: dev.in  install.txt  requirements.txt  requirements_dev.txt  uv.txt
scripts/: Initialize-Repo.ps1  Initialize-Windows.ps1  Sync-Py.ps1  pyproject.toml
scripts/softboiler_github_io_tools/: __main__.py  add_changes.py  sync.py
src/softboiler_github_io/: __init__.py
tests/: pyproject.toml
tests/softboiler_github_io_tests/: test_softboiler_github_io.py
